css/header.scss
.site-header {
  width: calc(100vw - 2 * $size-xl);
  position: sticky;
  top: 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: $size-md $size-xl;
  background-color: rgba($color-background, 0.5);
  backdrop-filter: blur($size-xs);

  p.site-title {
    max-width: 280px;

    img {
      width: 100%;
      height: auto;
    }
  }

  div.navigation-menu {
    display: flex;
    width: 70%;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;

    input[type="checkbox"] {
      display: none;
    }
    .nav-toggle-label {
      display: none;
    }

    ul {
      display: flex;
      list-style: none;
      padding: 0;
      margin: 0;
      gap: $size-md;

      li {
        margin-right: $size-md;
        color: $color-secondary;
        font-weight: bold;

        &.current_page_item a {
          color: $color-accent;
          padding: 0 $size-xs $size-xs;
          border-bottom: solid $color-accent $size-xxs;
          margin-bottom: -$size-xxs;
        }

        a {
          color: $color-secondary;
          text-decoration: none;

          &:hover {
            color: $color-accent;
          }
        }
      }
    }
    @media only screen and (max-width: 750px) {
      $list-item-height: calc(2 * $size-xl);
      .nav-toggle-label {
        z-index: 100;
        width: 30px;
        height: 30px;
        position: absolute;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;

        span,
        span::before,
        span::after {
          display: block;
          background-color: $color-secondary;
          height: $size-xxs;
          width: 100%;
          border-radius: 3px;
          position: absolute;
          transition: all 0.3s;
        }
        span::before {
          content: "";
          top: -8px;
        }

        span::after {
          content: "";
          top: 8px;
        }
      }
      input[type="checkbox"]:checked + .nav-toggle-label span {
        background-color: transparent;

        &::before {
          background-color: $color-secondary;
          transform: rotate(45deg);
          top: 0;
        }
        &::after {
          background-color: $color-secondary;
          transform: rotate(-45deg);
          top: 0;
        }
      }
      ul {
        gap: 0;
        opacity: 0;
        width: 100vw;
        display: flex;
        top: 100%;
        left: 0;
        z-index: 100;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: absolute;
        background-color: $color-background;
        transition: opacity 0.3s ease-in-out;

        li {
          width: 100%;
          margin: 0;
          height: 0;
          transition: height 0.3s ease-in-out;

          &.current_page_item a {
            background-color: $color-accent;
            color: $color-background;
            padding-left: $size-md;
          }
          a {
            display: block;
            padding: 0;
            width: 100%;
            padding-left: $size-md;
            cursor: pointer;
            transition:
              padding-top 0.3s ease-in-out,
              padding-bottom 0.3s ease-in-out;
            margin: 0;
            border-bottom-width: 0 !important;

            &:hover {
              background-color: $color-secondary;
              color: $color-background;
            }
          }
        }
      }
      input[type="checkbox"]:checked ~ div > ul {
        opacity: 1;
        max-height: 200px;

        li {
          height: $list-item-height;

          a {
            padding-top: calc($list-item-height / 4);
            padding-bottom: calc($list-item-height / 4);
          }
        }
      }
    }
  }
}

